# rmdev_math

./: .clang-format  CMakeLists.txt  LICENSE  Matrix.cppm  README.md  math.cppm
cmake/: config_use_cmsis_dsp.cmake
impl/cmsis-dsp/rmdev/math/: trigonometric_cmsis_impl.hpp
impl/cmsis-dsp/rmdev/matrix/: ArmMatrix.hpp  ArmMatrix.inl  ArmMatrixTraits.hpp  arm_matrix.hpp
inc/rmdev/: math.hpp  matrix.hpp
inc/rmdev/math/: basic.hpp  const_value.hpp  decimal.hpp  range.hpp  trigonometric.hpp
inc/rmdev/matrix/: matrix_base.hpp
inc/rmdev/matrix/detail/: arm_matrix.hpp
inc/rmdev/matrix/detail/arm_matrix/: ArmMatrix.hpp  ArmMatrix.inl  ArmMatrixTraits.hpp
math_impl/: basic.cppm  const_value.cppm  decimal.cppm  range.cppm  trigonometric.cppm
matrix/: CMakeLists.txt  Matrix.cppm  MatrixBase.cppm  MatrixType.cppm
matrix/ArmMatrix/: ArmMatrix.cppm  ArmMatrix_implements.cppm  ArmMatrix_interface.cppm  ArmMatrix_traits.cppm  CMakeLists.txt
matrix/MatrixType/: CMakeLists.txt  MatrixType.cppm
